# HerosOneCore

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  package.json
app/: layout.tsx
app/apollo/: page.tsx
app/assist/: page.tsx
app/explorer/: page.tsx
app/ontology/: page.tsx
app/pipeline/: page.tsx
apps/web/: next.config.ts  package-lock.json  package.json
components/: app-launcher.tsx  app-logo.tsx  app-shell.tsx  app-sidebar.tsx  nav-main.tsx  resource-detail-drawer.tsx
components/ui/: card.tsx
config/: example.env
cube/: up.sh
cube/model/: metric_map.json
deploy/: .env.example  Dockerfile.nginx  Dockerfile.svc  Dockerfile.web  README.md  docker-compose.yml  hoc.env.example  nginx.conf
docs/: HR场景运行手册.md  auth-service.md  governance-service.md  ontology-service.md  pipeline-service.md
poc/: README.md
poc/superset/: superset_config.py  up.sh
scripts/: README.md  env.sh
scripts/infra/: start_airflow.sh  start_source_db.sh
scripts/seed/: bootstrap_hr.py  bootstrap_ops.py  seed.sh  seed_base.sql  seed_classifications.sh  seed_dataset_labels.py  seed_hr.sh  seed_hr.sql  seed_ops.sh  seed_ops.sql  seed_supply_chain.sql
scripts/services/: start_all.sh  start_analysis.sh  start_assist.sh  start_auth.sh  start_data.sh  start_governance.sh  start_ontology.sh  start_pipeline.sh  start_web.sh
services/analysis/: pyproject.toml
services/analysis/app/: main.py
services/analysis/app/api/: analyses.py  analysis.py  metrics.py
services/analysis/app/clients/: cube_service.py  ontology_service.py
services/analysis/app/core/: audit.py  auth.py  classifications.py  config.py  db.py
services/analysis/app/domain/: metrics.py  tables.py
services/analysis/app/repositories/: analyses_store.py  metrics_store.py  models.py  object_rows.py  provider.py
services/analysis/app/schemas/: analyses.py  analysis.py  metrics.py
services/analysis/app/services/: analyze.py  metric_defs.py  metric_query.py
services/analysis/app/tools/: __init__.py  generate_cube_schema.py
services/app-builder/: pyproject.toml
services/app-builder/app/: main.py
services/app-builder/app/api/: apps.py
services/app-builder/app/clients/: marketplace.py
services/app-builder/app/core/: auth.py  config.py  db.py
services/app-builder/app/repositories/: models.py  store.py
services/app-builder/app/schemas/: app_def.py  builder_app.py
services/app-builder/app/services/: app_service.py
services/assist/: .env.example  pyproject.toml
services/assist/app/: main.py
services/assist/app/agent/: build.py  tools.py
services/assist/app/api/: ai.py  chat.py  sessions.py
services/assist/app/clients/: analysis_service.py  data_service.py  governance_service.py  ontology_service.py
services/assist/app/core/: config.py  db.py
services/assist/app/repositories/: models.py  store.py
services/assist/app/schemas/: chat.py
services/auth/: README.md  pyproject.toml
services/auth/app/: main.py
services/auth/app/api/: auth.py  deps.py  roles.py  users.py
services/auth/app/core/: config.py  db.py  security.py
services/auth/app/repositories/: models.py
services/auth/app/schemas/: auth.py
services/auth/app/services/: auth_service.py  user_service.py
services/data/: README.md  pyproject.toml
services/data/app/: main.py
services/data/app/api/: connector_types.py  connectors.py  datasets.py  syncs.py
services/data/app/clients/: duckdb_loader.py  source_postgres.py  storage.py
services/data/app/core/: audit.py  auth.py  classifications.py  config.py  db.py  pagination.py
services/data/app/domain/: connector_types.py  enums.py
services/data/app/events/: publishers.py
services/data/app/repositories/: models.py
services/data/app/schemas/: connector.py  connector_type.py  dataset.py  sync.py
services/data/app/services/: connector_service.py  dataset_service.py  sync_service.py
services/governance/: README.md  pyproject.toml
services/governance/app/: main.py
services/governance/app/api/: governance.py
services/governance/app/clients/: openmetadata.py  upstream.py
services/governance/app/core/: auth.py  config.py  db.py  logging.py
services/governance/app/repositories/: models.py
services/governance/app/schemas/: governance.py
services/governance/app/services/: audit_service.py  catalog_service.py  classifications_service.py  lineage_service.py  roles_service.py  stats_service.py
services/marketplace/: pyproject.toml
services/marketplace/app/: main.py
services/marketplace/app/api/: apps.py
services/marketplace/app/core/: config.py
services/marketplace/app/repositories/: models.py
services/marketplace/app/schemas/: market_app.py
services/marketplace/app/services/: market_service.py
services/ontology/: README.md  pyproject.toml
services/ontology/app/: main.py
services/ontology/app/api/: graph.py  link_types.py  object_types.py  objects.py
services/ontology/app/clients/: data_client.py  query.py
services/ontology/app/core/: audit.py  auth.py  classifications.py  config.py  db.py
services/ontology/app/domain/: enums.py
services/ontology/app/events/: publishers.py
services/ontology/app/repositories/: models.py
services/ontology/app/schemas/: graph.py  link_type.py  object_type.py
services/ontology/app/services/: graph_service.py  link_type_service.py  object_service.py  object_type_service.py
services/pipeline/: README.md  pyproject.toml
services/pipeline/airflow/: Dockerfile  README.md
services/pipeline/airflow/dags/: run_dbt.py
services/pipeline/app/: main.py
services/pipeline/app/api/: graph.py  pipelines.py  runs.py
services/pipeline/app/clients/: airflow_client.py  data_client.py  dbt_runner.py  query.py
services/pipeline/app/core/: audit.py  auth.py  config.py
services/pipeline/app/domain/: dag.py  enums.py
services/pipeline/app/events/: publishers.py
services/pipeline/app/repositories/: models.py
services/pipeline/app/schemas/: graph.py  pipeline.py  run.py
services/pipeline/app/services/: compiler.py  graph_service.py  pipeline_service.py  run_service.py
ui/: package.json
(+139 files in other folders)
