[project]
name = "herosonecore-analysis"
version = "0.1.0"
description = "HerosOneCore analysis service — dimensional aggregation over platform datasets"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Runtime, not dev: the Postgres store uses the psycopg (v3) driver
    # (DATABASE_URL=postgresql+psycopg://…), and upstream calls to ontology /
    # data / governance use httpx.
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
