[project]
name = "askdelphi-app-builder"
version = "0.1.0"
description = "AskDelphi app-builder service — versioned Puck application definitions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Runtime: the store uses the psycopg (v3) driver
    # (DATABASE_URL=postgresql+psycopg://…).
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
