[project]
name = "herosonecore-assist"
version = "0.1.0"
description = "HerosOneCore assist service — AIP copilot agent (deepagents) with streaming chat"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "deepagents>=0.6",
    "langchain-openai>=1.0",
    "langchain-core>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
