[project]
name = "herosonecore-auth"
version = "0.1.0"
description = "HerosOneCore auth service — users, roles, JWT login, authorization"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
