[project]
name = "askdelphi-pipeline"
version = "0.1.0"
description = "AskDelphi pipeline service — visual DAG compiled to dbt, run via dbt/Airflow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "duckdb>=1.0",
    "dbt-duckdb>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
